groovy-format: Enable some rules
keep some disabled which seems to have no auto-fix

Change-Id: I2b0da4fa139323d9eaabbed88e1407a86e811976

--- a/bazel/tools/format/.groovyformatrc.json
+++ b/bazel/tools/format/.groovyformatrc.json
@@ -1,50 +1,50 @@
 {
   "rules": {
-    "braces.ElseBlockBraces": {},
-    "braces.ForStatementBraces": {},
-    "braces.IfStatementBraces": {},
-    "braces.WhileStatementBraces": {},
-    "convention.NoTabCharacter": {},
-    "formatting.BlankLineBeforePackage": {},
-    "formatting.BlockEndsWithBlankLine": {},
-    "formatting.BlockStartsWithBlankLine": "off",
-    "formatting.BracesForClass": {},
-    "formatting.BracesForForLoop": {},
-    "formatting.BracesForIfElse": {},
-    "formatting.BracesForMethod": {},
-    "formatting.BracesForTryCatchFinally": {},
-    "formatting.ClassEndsWithBlankLine": {},
-    "formatting.ClassStartsWithBlankLine": {},
+    "braces.ElseBlockBraces": "info",
+    "braces.ForStatementBraces": "info",
+    "braces.IfStatementBraces": "error",
+    "braces.WhileStatementBraces": "error",
+    "convention.NoTabCharacter": "error",
+    "formatting.BlankLineBeforePackage": "error",
+    "formatting.BlockEndsWithBlankLine": "error",
+    "formatting.BlockStartsWithBlankLine": "info",
+    "formatting.BracesForClass": "error",
+    "formatting.BracesForForLoop": "error",
+    "formatting.BracesForIfElse": "error",
+    "formatting.BracesForMethod": "error",
+    "formatting.BracesForTryCatchFinally": "error",
+    "formatting.ClassEndsWithBlankLine": "error",
+    "formatting.ClassStartsWithBlankLine": "error",
     "formatting.ClosureStatementOnOpeningLineOfMultipleLineClosure": "off",
-    "formatting.ConsecutiveBlankLines": {},
-    "formatting.FileEndsWithoutNewline": {},
+    "formatting.ConsecutiveBlankLines": "error",
+    "formatting.FileEndsWithoutNewline": "error",
     "formatting.Indentation": {
       "spacesPerIndentLevel": 4,
-      "severity": "info"
+      "severity": "error"
     },
     "formatting.LineLength": {
       "length": 140,
-      "severity": "warning"
+      "severity": "error"
     },
-    "formatting.MissingBlankLineAfterImports": {},
-    "formatting.MissingBlankLineAfterPackage": {},
-    "formatting.SpaceAfterCatch": {},
-    "formatting.SpaceAfterClosingBrace": {},
-    "formatting.SpaceAfterComma": {},
-    "formatting.SpaceAfterFor": {},
-    "formatting.SpaceAfterIf": {},
-    "formatting.SpaceAfterMethodCallName": {},
-    "formatting.SpaceAfterOpeningBrace": {},
-    "formatting.SpaceAfterSemicolon": {},
-    "formatting.SpaceAfterSwitch": {},
-    "formatting.SpaceAfterWhile": {},
-    "formatting.SpaceAroundClosureArrow": {},
+    "formatting.MissingBlankLineAfterImports": "error",
+    "formatting.MissingBlankLineAfterPackage": "error",
+    "formatting.SpaceAfterCatch": "error",
+    "formatting.SpaceAfterClosingBrace": "error",
+    "formatting.SpaceAfterComma": "error",
+    "formatting.SpaceAfterFor": "error",
+    "formatting.SpaceAfterIf": "error",
+    "formatting.SpaceAfterMethodCallName": "error",
+    "formatting.SpaceAfterOpeningBrace": "error",
+    "formatting.SpaceAfterSemicolon": "error",
+    "formatting.SpaceAfterSwitch": "error",
+    "formatting.SpaceAfterWhile": "error",
+    "formatting.SpaceAroundClosureArrow": "error",
     "formatting.SpaceAroundMapEntryColon": "off",
-    "formatting.SpaceAroundOperator": "off",
+    "formatting.SpaceAroundOperator": "error",
     "formatting.SpaceBeforeClosingBrace": "off",
-    "formatting.SpaceBeforeOpeningBrace": {},
-    "formatting.SpaceInsideParentheses": {},
-    "formatting.TrailingWhitespace": {},
+    "formatting.SpaceBeforeOpeningBrace": "error",
+    "formatting.SpaceInsideParentheses": "error",
+    "formatting.TrailingWhitespace": "error",
     "unnecessary.UnnecessaryGString": "off",
     "unnecessary.UnnecessarySemicolon": "off"
   }
