Packaging: agent plugins must be executable
This fixes a regression where the agents were distributed
with the wrong mode.

CMK-28121

Change-Id: I315d1befaef87ce16f044daed7cea581f6d5ec54

--- a/omd/BUILD
+++ b/omd/BUILD
@@ -151,6 +151,7 @@ pkg_files(
 pkg_files(
     name = "agents_plugins",
     srcs = ["//agents/plugins:srcs"],
+    attributes = pkg_attributes(mode = "0755"),
     prefix = "share/check_mk/agents/plugins",
 )
 
