Packaging: agent scripts must be executable
This fixes a regression where the scripts were distributed
with the wrong mode.

CMK-28121

Change-Id: I1f8c9a2685f8a4c6c67733933dc37b0d6d0a92f2

--- a/omd/BUILD
+++ b/omd/BUILD
@@ -185,12 +185,14 @@ pkg_tar(
 pkg_files(
     name = "agents_scripts",
     srcs = ["//agents:srcs"],
+    attributes = pkg_attributes(mode = "0755"),
     prefix = "share/check_mk/agents/scripts",
 )
 
 pkg_tar(
     name = "agents_scripts_super_server",
     srcs = ["//agents:super-server"],
+    mode = "0755",
     package_dir = "share/check_mk",
     strip_prefix = "scripts",
 )
