Update 2FA input to adhere to latest UX design
CMK-14763

Change-Id: Ia6e15445eb15013129407044fb54f72b61b0ab66

--- a/packages/cmk-shared-typing/BUILD
+++ b/packages/cmk-shared-typing/BUILD
@@ -36,6 +36,7 @@ SOURCES_COMMON = [
     "welcome.json",
     "agent_slideout.json",
     "product_telemetry.json",
+    "two_factor_auth.json",
 ]
 
 SOURCES_SPECIAL_DATACLASSES = [
