apache-omd: install apache files via tar file
CMK-27398

Change-Id: I552fdfdcff430e16f087385defad920c059c5d36

--- a/omd/BUILD
+++ b/omd/BUILD
@@ -258,6 +258,7 @@ pkg_files(
                "//notifications",
                #added here instead of above because of disappearing file
                "//omd/packages/Python:python_tar",
+               "//omd/packages/apache-omd",
                "//omd/packages/changelog",
                "//omd/packages/check-cert",
                "//omd/packages/check_mk",
