--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ ignore = [
 "non-free/packages/cmk-mknotifyd/*" = ["ARG001", "ARG002", "SLF001"]
 "tests/*" = ["A002", "ARG001", "ARG002", "ARG003", "ARG004", "ARG005", "SLF001"]
 "agents/*" = ["ARG001", "ARG002", "SLF001"]
-# Agent plugins still need to support Python 2.7
+# Agent plugins still need to support Python 3.4
 "agents/plugins/*" = [
   "UP007", # Use `X | Y` for type annotations
   "UP009", # UTF-8 encoding declaration is unnecessary
@@ -81,7 +81,7 @@ ignore = [
   "UP041", # Replace aliased errors with `TimeoutError`
 ]
 "tests/agent-plugin-unit/*" = [
-  "UP006", # Use `collections.defaultdict` instead of `DefaultDict` for type annotation
+  "UP006", # PEP 585 (Type Hinting Generics In Standard Collections) is a Python 3.9 feature
   "UP007", # Use `X | Y` for type annotations
   "UP009", # UTF-8 encoding declaration is unnecessary
   "UP010", # Unnecessary `__future__` import `with_statement` for target Python version
