Comments only (about UP032)
CMK-24154

Change-Id: Iceba55d3ba10635fb43d0f1f624e7fd36a145b56

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ ignore = [
 # Agent plugins still need to support Python 3.4
 "agents/plugins/*" = [
   "UP007", # PEP 604 (Allow writing union types as X | Y) is a Python 3.10 feature
-  "UP032", # Use f-string instead of `format` call
+  "UP032", # PEP 498 (Literal String Interpolation) is a Python 3.6 feature
   "UP036", # Version block is outdated for minimum Python version
   "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
   "UP041", # Replace aliased errors with `TimeoutError`
