--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ ignore = [
 "packages/cmk-ec/*" = ["ARG001", "ARG002"]
 "packages/cmk-plugins/*" = ["ARG001", "ARG002"]
 "non-free/packages/cmk-mknotifyd/*" = ["ARG001", "ARG002", "SLF001"]
-"tests/*" = ["A002", "ARG001", "ARG002", "ARG003", "ARG004", "ARG005", "SLF001"]
+"tests/*" = ["ARG001", "ARG002", "ARG003", "ARG004", "ARG005", "SLF001"]
 "agents/*" = ["ARG001", "ARG002", "SLF001"]
 # Agent plugins still need to support Python 3.4
 "agents/plugins/*" = [
