feat: add product telemetry pop up window
SAASDEV-5932

Change-Id: Iddf56332a6e913c44ce0029535b1debb03a9abc1

--- a/packages/cmk-shared-typing/BUILD
+++ b/packages/cmk-shared-typing/BUILD
@@ -35,6 +35,7 @@ SOURCES_COMMON = [
     "vue_formspec_components.json",
     "welcome.json",
     "agent_slideout.json",
+    "product_telemetry.json",
 ]
 
 SOURCES_SPECIAL_DATACLASSES = [
