Comments only (about UP035)
CMK-24154

Change-Id: I6f56506f90575acc7f40132e7696b6f817eb5249

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@ ignore = [
 "tests/agent-plugin-unit/*" = [
   "UP006", # PEP 585 (Type Hinting Generics In Standard Collections) is a Python 3.9 feature
   "UP007", # PEP 604 (Allow writing union types as X | Y) is a Python 3.10 feature
-  "UP035", # Import from `FOO` instead: `BAR`
+  "UP035", # PEP 585 (Type Hinting Generics In Standard Collections) is a Python 3.9 feature
   "UP036", # Version block is outdated for minimum Python version
   "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
   "UP045", # Use `X | None` for type annotations
