Exclude example files from semgrep rule `disallow-print`
Change-Id: Ie04289ff2c8701058ee97cb234589185d0783263

--- a/tests/semgrep/rules/find_debug_print.yaml
+++ b/tests/semgrep/rules/find_debug_print.yaml
@@ -20,3 +20,4 @@ rules:
               - "agents/plugins"
           exclude:
               - "doc/treasures"
+              - "packages/cmk-livestatus-client/example*.py"
