Metric explorer: Use simple input field for aggregation lookback
Small prepartion for time span

Change-Id: I4ed53f3fd46f3f281c271d59627a1c29a0b1e6ba

--- a/packages/cmk-shared-typing/source/vue_formspec/components.json
+++ b/packages/cmk-shared-typing/source/vue_formspec/components.json
@@ -932,18 +932,6 @@
         "$ref": "#/$defs/metric_backend_custom_query_attribute"
       }
     },
-    "metric_backend_custom_query_aggregation_lookback_unit": {
-      "type": "string",
-      "enum": ["s", "min"]
-    },
-    "metric_backend_custom_query_aggregation_lookback": {
-      "type": "object",
-      "properties": {
-        "value": { "type": "number" },
-        "unit": { "$ref": "#/$defs/metric_backend_custom_query_aggregation_lookback_unit" }
-      },
-      "required": ["value", "unit"]
-    },
     "metric_backend_custom_query": {
       "id": "metric_backend_custom_query",
       "type": "object",
@@ -971,7 +959,7 @@
               "$ref": "#/$defs/metric_backend_custom_query_attributes"
             },
             "aggregation_lookback": {
-              "$ref": "#/$defs/metric_backend_custom_query_aggregation_lookback"
+              "type": "number"
             },
             "aggregation_histogram_percentile": {
               "type": "number"
