--- a/packages/cmk-plugins/BUILD
+++ b/packages/cmk-plugins/BUILD
@@ -417,6 +417,42 @@ py_test(
 )
 
 py_library(
+    name = "splunk",
+    srcs = glob(["cmk/plugins/splunk/**/*.py"]),
+    data = glob([
+        "cmk/plugins/splunk/checkman/*",
+        "cmk/plugins/splunk/libexec/*",
+    ]) + ["cmk/plugins/splunk/py.typed"],
+    imports = ["."],
+    visibility = ["//visibility:public"],
+    deps = [
+        ":lib",
+        "//packages/cmk-plugin-apis:agent_based",
+        "//packages/cmk-plugin-apis:graphing",
+        "//packages/cmk-plugin-apis:password_store",
+        "//packages/cmk-plugin-apis:rulesets",
+        "//packages/cmk-plugin-apis:server_side_calls",
+        "//packages/cmk-plugin-apis:server_side_programs",
+        requirement("requests"),
+        requirement("pydantic"),
+        requirement("urllib3"),
+    ],
+)
+
+py_test(
+    name = "splunk-test",
+    size = "small",
+    srcs = glob(["tests/cmk/plugins/splunk/**/*.py"]) + [":__test__.py"],
+    main = ":__test__.py",
+    deps = [
+        ":__test__",
+        ":splunk",
+        requirement("pytest"),
+        requirement("polyfactory"),
+    ],
+)
+
+py_library(
     name = "ucs_bladecenter",
     srcs = glob(["cmk/plugins/ucs_bladecenter/**/*.py"]),
     data = ["cmk/plugins/ucs_bladecenter/py.typed"],
