--- a/.bazelrc
+++ b/.bazelrc
@@ -10,6 +10,9 @@ try-import %workspace%/remote.bazelrc
 common --registry="file://%workspace%/bazel/registry"
 common --registry=https://bcr.bazel.build
 
+# Add mirrors for certain download URLs
+common --experimental_downloader_config=bazel_downloader.cfg
+
 # default/common bazel args for all commands supporting it
 common --experimental_ui_max_stdouterr_bytes=10000000
 common --experimental_remote_cache_async
