Retrieve downloads through our pull-through cache
The second line per domain acts as a fallback.
In case someone can't use our internal pull-through cache Bazel will
then move on to the next URL and try that.
We point it at the original URL to have it working when not in our
internal network.

References CMK-21869

Change-Id: I9476abab6ef807aff876ccaf0483fd3dc6cb8107

--- a/.bazelrc
+++ b/.bazelrc
@@ -3,6 +3,9 @@ common --registry="file:///%workspace%/bazel/thirdparty"
 common --registry="file:///%workspace%/bazel/registry"
 common --registry=https://bcr.bazel.build
 
+# Add mirrors for certain download URLs
+common --downloader_config=bazel_downloader.cfg
+
 # enable a local disk cache: this is especially relevant for local builds without an enabled bazel-remote
 common:linux --disk_cache=~/.cache/bazel_disk_cache/
 common:linux --experimental_disk_cache_gc_max_size=100G
