cmk-plugins: tiny fix
Change-Id: I861f8e3fae8c20a1a72b5ba0047b6ae89ec6a8ad

--- a/packages/cmk-plugins/BUILD
+++ b/packages/cmk-plugins/BUILD
@@ -386,7 +386,7 @@ py_test(
 py_library(
     name = "ucs_bladecenter",
     srcs = glob(["cmk/plugins/ucs_bladecenter/**/*.py"]),
-    data = ["cmk/plugins/kube/py.typed"],
+    data = ["cmk/plugins/ucs_bladecenter/py.typed"],
     imports = ["."],
     visibility = ["//visibility:public"],
     deps = [
