test-plugins-consistency: Improve HTML report
Generate a self-contained HTML file so that no external assets are
needed.
This will make the HTML report useful when opening it via Jenkins.

Change-Id: Id8048b48ef0f464b18009af3011700db96b4b6db

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -306,7 +306,7 @@ test-plugins-siteless:
 
 test-plugins-consistency:
 	$(PYTEST) --log-cli-level=INFO $(realpath plugins_siteless/plugins_consistency) \
-	--session-timeout 1800 --html="../results/plugins-consistency.html"
+	--session-timeout 1800 --html="../results/plugins-consistency.html" --self-contained-html
 
 $(foreach TEST,$(SYSTEM_TESTS),$(TEST)-docker):
 	$(UVENV) scripts/run-dockerized.py "$(subst -docker,,$@)"
