bin: add missing entry
CMK-28364

Change-Id: I1232306781e45b57007bbfe5238a203931fd73c8

--- a/bin/BUILD
+++ b/bin/BUILD
@@ -64,6 +64,7 @@ pkg_files(
         ":cmk-monitor-broker",
         ":cmk-monitor-core",
         ":cmk-monitor-diskusage",
+        ":cmk-monitor-metric-backend",
         ":cmk-monitor-mkbackup",
         ":cmk-monitor-mknotifyd",
         ":cmk-monitor-otel-collector",
