Compress ARM agent controller
CMK-27515

Change-Id: I0fb9cd29bece82b198b0f025bedab8b6244c8610

--- a/agents/BUILD
+++ b/agents/BUILD
@@ -30,6 +30,7 @@ filegroup(
         "linux/cmk-agent-ctl",
         "linux/cmk-agent-ctl.gz",
         "linux/cmk-agent-ctl-aarch64",
+        "linux/cmk-agent-ctl-aarch64.gz",
         "linux/mk-sql",
     ],
     visibility = ["//omd:__subpackages__"],
