--- a/tests/Makefile
+++ b/tests/Makefile
@@ -439,6 +439,7 @@ test-unit-all-coverage:
 	cd .. && \
 	    bazel coverage --test_verbose_timeout_warnings //tests/unit:all \
 	    --test_env=TZ=$(RANDOM_TZ) \
+	    --test_arg="--numprocesses=4" \
 	    --test_arg="-m" --test_arg="not skip_on_code_coverage" \
 		$(BAZEL_COVERAGE_ARGS) ; \
 	    export PATH=$$PATH:$$(bazel run //bazel/tools:bazel_env print-path) && \
