Add FormDCDMetricBackend form spec
Jira: CMK-28377
Change-Id: I09d01e1737f324187e9f89601a6cb17db793f964
(cherry picked from commit 78d90f475434d2726e366bf6e84e825ef3b9d7ad)

--- a/packages/cmk-shared-typing/source/vue_formspec/components.json
+++ b/packages/cmk-shared-typing/source/vue_formspec/components.json
@@ -960,7 +960,7 @@
       },
       "required": ["authority_url", "display_name"]
     },
-    "metric_backend_custom_query_attribute": {
+    "metric_backend_attribute": {
       "type": "object",
       "properties": {
         "key": {
@@ -972,10 +972,10 @@
       },
       "required": ["key", "value"]
     },
-    "metric_backend_custom_query_attributes": {
+    "metric_backend_attributes": {
       "type": "array",
       "items": {
-        "$ref": "#/$defs/metric_backend_custom_query_attribute"
+        "$ref": "#/$defs/metric_backend_attribute"
       }
     },
     "metric_backend_custom_query": {
@@ -996,13 +996,13 @@
               "oneOf": [{ "type": "null" }, { "type": "string" }]
             },
             "resource_attributes": {
-              "$ref": "#/$defs/metric_backend_custom_query_attributes"
+              "$ref": "#/$defs/metric_backend_attributes"
             },
             "scope_attributes": {
-              "$ref": "#/$defs/metric_backend_custom_query_attributes"
+              "$ref": "#/$defs/metric_backend_attributes"
             },
             "data_point_attributes": {
-              "$ref": "#/$defs/metric_backend_custom_query_attributes"
+              "$ref": "#/$defs/metric_backend_attributes"
             },
             "aggregation_lookback": {
               "type": "number"
@@ -1020,6 +1020,33 @@
             "aggregation_lookback",
             "aggregation_histogram_percentile"
           ]
+        }
+      ]
+    },
+    "dcd_metric_backend_filter": {
+      "id": "dcd_metric_backend_filter",
+      "allOf": [
+        {
+          "$ref": "#/$defs/form_spec"
+        },
+        {
+          "type": "object",
+          "properties": {
+            "type": {
+              "const": "dcd_metric_backend_filter",
+              "default": "dcd_metric_backend_filter"
+            },
+            "resource_attributes": {
+              "$ref": "#/$defs/metric_backend_attributes"
+            },
+            "scope_attributes": {
+              "$ref": "#/$defs/metric_backend_attributes"
+            },
+            "data_point_attributes": {
+              "$ref": "#/$defs/metric_backend_attributes"
+            }
+          },
+          "required": ["type", "resource_attributes", "scope_attributes", "data_point_attributes"]
         }
       ]
     },
@@ -1882,6 +1909,9 @@
         },
         {
           "$ref": "#/$defs/metric_backend_custom_query"
+        },
+        {
+          "$ref": "#/$defs/dcd_metric_backend_filter"
         },
         {
           "$ref": "#/$defs/oauth2_connection_setup"
